Ajustes de criação do serviço

--- a/pages/academico/cursos.html
+++ b/pages/academico/cursos.html
@@ -191,8 +191,8 @@
 
                       <tr>
                         <td><a data-toggle="modal" data-target="#ModalDetalhaGrupo"
-                                       href="#ModalDetalhaGrupo" class="text-warning"><small><i class="fa fa-exclamation-triangle mr-xs" aria-hidden="true"></i></small> <strong>THOMAS
-                          FLEX</strong></a></td>
+                                       href="#ModalDetalhaGrupo" class="text-warning"><strong>THOMAS
+                          FLEX</strong><small><i class="fa fa-exclamation-triangle ml-sm" aria-hidden="true"></i></small> </a></td>
                         <td>Adultos</td>
                         <td>Online</td>
                         <td>R$ 000,00</td>
