--- a/pages/academico/niveis.html
+++ b/pages/academico/niveis.html
@@ -201,8 +201,8 @@
                                       aria-haspopup="true" aria-expanded="false">Ações
                               </button>
                               <div class="dropdown-menu">
-                                <a class="dropdown-item" href="editar--niveis.html"><i class="fa fa-pencil-square-o mr-xs"
-                                                                     aria-hidden="true"></i>
+                                <a class="dropdown-item" href="niveis--editar.html"><i class="fa fa-pencil-square-o mr-xs"
+                                                                                       aria-hidden="true"></i>
                                   Editar</a>
                                 <a class="dropdown-item" href="#"><i class="fa fa-files-o mr-xs" aria-hidden="true"></i>
                                   Replicar</a>
@@ -227,8 +227,8 @@
                                       aria-haspopup="true" aria-expanded="false">Ações
                               </button>
                               <div class="dropdown-menu">
-                                <a class="dropdown-item" href="editar--niveis.html"><i class="fa fa-pencil-square-o mr-xs"
-                                                                     aria-hidden="true"></i>
+                                <a class="dropdown-item" href="niveis--editar.html"><i class="fa fa-pencil-square-o mr-xs"
+                                                                                       aria-hidden="true"></i>
                                   Editar</a>
                                 <a class="dropdown-item" href="#"><i class="fa fa-files-o mr-xs" aria-hidden="true"></i>
                                   Replicar</a>
