--- a/pages/posto/posto--editar.html
+++ b/pages/posto/posto--editar.html
@@ -235,16 +235,27 @@
                         <tr>
                           <th>Tipo</th>
                           <th>Número</th>
+                          <th></th>
                         </tr>
                         </thead>
                         <tbody>
                         <tr>
                           <td>Principal</td>
                           <td>(61) 0000-0000</td>
+                          <td>
+                            <button type="button" class="btn btn-danger-outline btn-sm"><i
+                                    class="fa fa-times"
+                                    aria-hidden="true"></i></button>
+                          </td>
                         </tr>
                         <tr>
                           <td>Comercial</td>
                           <td>(61) 0000-0000</td>
+                          <td>
+                            <button type="button" class="btn btn-danger-outline btn-sm"><i
+                                    class="fa fa-times"
+                                    aria-hidden="true"></i></button>
+                          </td>
                         </tr>
                         </tbody>
                       </table>
