--- a/pages/posto/unidade.html
+++ b/pages/posto/unidade.html
@@ -156,7 +156,7 @@
                         <td>Ativo</td>
                         <td>
                           <div class="pull-right">
-                            <a class="btn btn-default-outline btn-sm" href="editar--unidade.html">
+                            <a class="btn btn-default-outline btn-sm" href="unidade--editar.html">
                               <i class="fa fa-pencil-square-o mr-xs" aria-hidden="true"></i> Editar
                             </a>
                           </div>
@@ -171,7 +171,7 @@
                         <td>Ativo</td>
                         <td>
                           <div class="pull-right">
-                            <a class="btn btn-default-outline btn-sm" href="editar--unidade.html">
+                            <a class="btn btn-default-outline btn-sm" href="unidade--editar.html">
                               <i class="fa fa-pencil-square-o mr-xs" aria-hidden="true"></i> Editar
                             </a>
                           </div>
@@ -186,7 +186,7 @@
                         <td>Ativo</td>
                         <td>
                           <div class="pull-right">
-                            <a class="btn btn-default-outline btn-sm" href="editar--unidade.html">
+                            <a class="btn btn-default-outline btn-sm" href="unidade--editar.html">
                               <i class="fa fa-pencil-square-o mr-xs" aria-hidden="true"></i> Editar
                             </a>
                           </div>
