--- a/pages/servicos/servicos.html
+++ b/pages/servicos/servicos.html
@@ -258,7 +258,7 @@
                                     aria-haspopup="true" aria-expanded="false">Ações
                             </button>
                             <div class="dropdown-menu">
-                              <a class="dropdown-item" href="#"><i class="fa fa-pencil-square-o mr-xs"
+                              <a class="dropdown-item" href="servicos--editar.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                    aria-hidden="true"></i>
                                 Editar</a>
                               <div class="dropdown-divider"></div>
@@ -283,7 +283,7 @@
                                     aria-haspopup="true" aria-expanded="false">Ações
                             </button>
                             <div class="dropdown-menu">
-                              <a class="dropdown-item" href="#"><i class="fa fa-pencil-square-o mr-xs"
+                              <a class="dropdown-item" href="servicos--editar.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                    aria-hidden="true"></i>
                                 Editar</a>
                               <div class="dropdown-divider"></div>
