Ajustes no links

--- a/pages/servicos/servicos.html
+++ b/pages/servicos/servicos.html
@@ -260,8 +260,9 @@
                                     aria-haspopup="true" aria-expanded="false">Ações
                             </button>
                             <div class="dropdown-menu">
-                              <a class="dropdown-item" href="servicos--editar.html"><i class="fa fa-pencil-square-o mr-xs"
-                                                                   aria-hidden="true"></i>
+                              <a class="dropdown-item" href="servicos--editar.html"><i
+                                      class="fa fa-pencil-square-o mr-xs"
+                                      aria-hidden="true"></i>
                                 Editar</a>
                               <div class="dropdown-divider"></div>
                               <a class="dropdown-item" href="#"><i class="fa fa-trash mr-xs" aria-hidden="true"></i>
@@ -286,8 +287,9 @@
                                     aria-haspopup="true" aria-expanded="false">Ações
                             </button>
                             <div class="dropdown-menu">
-                              <a class="dropdown-item" href="#"><i class="fa fa-pencil-square-o mr-xs"
-                                                                   aria-hidden="true"></i>
+                              <a class="dropdown-item" href="servicos--editar.html"><i
+                                      class="fa fa-pencil-square-o mr-xs"
+                                      aria-hidden="true"></i>
                                 Editar</a>
                               <div class="dropdown-divider"></div>
                               <a class="dropdown-item" href="#"><i class="fa fa-trash mr-xs" aria-hidden="true"></i>
@@ -312,7 +314,7 @@
                                     aria-haspopup="true" aria-expanded="false">Ações
                             </button>
                             <div class="dropdown-menu">
-                              <a class="dropdown-item" href="#"><i class="fa fa-pencil-square-o mr-xs"
+                              <a class="dropdown-item" href="servicos--editar.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                    aria-hidden="true"></i>
                                 Editar</a>
                               <div class="dropdown-divider"></div>
@@ -323,7 +325,7 @@
                         </td>
                       </tr>
 
-					 <tr>
+                      <tr>
                         <td><strong><a data-toggle="modal" data-target="#ModalDetalhaServico"
                                        href="#ModalDetalhaServico">Tradução Certificada</a></strong></td>
                         <td>Serviço de Tradução</td>
@@ -348,8 +350,8 @@
                           </div>
                         </td>
                       </tr>
-                     
-                     <tr>
+
+                      <tr>
                         <td><strong><a data-toggle="modal" data-target="#ModalDetalhaServico"
                                        href="#ModalDetalhaServico">Locação de Livro</a></strong></td>
                         <td>Biblioteca</td>
@@ -364,8 +366,9 @@
                                     aria-haspopup="true" aria-expanded="false">Ações
                             </button>
                             <div class="dropdown-menu">
-                              <a class="dropdown-item" href="servicos--editar.html"><i class="fa fa-pencil-square-o mr-xs"
-                                                                   aria-hidden="true"></i>
+                              <a class="dropdown-item" href="servicos--editar.html"><i
+                                      class="fa fa-pencil-square-o mr-xs"
+                                      aria-hidden="true"></i>
                                 Editar</a>
                               <div class="dropdown-divider"></div>
                               <a class="dropdown-item" href="#"><i class="fa fa-trash mr-xs" aria-hidden="true"></i>
