--- a/pages/academico/cursos--editar.html
+++ b/pages/academico/cursos--editar.html
@@ -94,7 +94,7 @@
                   <fieldset class="form-group">
                     <label class="form-label semibold" for="">Nome<span
                             class="semibold text-danger h4">*</span></label>
-                    <input type="text" class="form-control" id="" placeholder="Nome" value="THOMAS FLEX">
+                    <input type="text" class="form-control" id="" placeholder="Nome" value="Advanced Grammar">
                   </fieldset>
                 </div>
 
@@ -287,7 +287,7 @@
               </div>
               <div class="row divider-top">
                 <div class="col-sm-12">
-                  <button type="button" class="btn btn-primary btn-success"><i
+                  <button id="notie-success" type="button" class="btn btn-primary btn-success"><i
                           class="fa fa-floppy-o mr-xs"
                           aria-hidden="true"></i>
                     Salvar
@@ -513,6 +513,8 @@
 <script src="../../js/lib/angular/controllers.js"></script>
 
 <script src="../../js/lib/bootstrap-sweetalert/sweetalert.min.js"></script>
+<script src="../../js/lib/notie/notie.js"></script>
+<script src="../../js/lib/notie/notie-init.js"></script>
 
 
 <script>
