--- a/pages/posto/editar--unidade.html
+++ b/pages/posto/editar--unidade.html
@@ -100,9 +100,9 @@
                       <label class="form-label semibold" for="">Unidade</label>
                       <select class="select2 select2-arrow">
                         <option>Selecione</option>
-                        <option selected>Asa sul</option>
+                       	<option selected>Águas claras</option>
+                        <option>Asa sul</option>
                         <option>Asa norte</option>
-                        <option>Águas claras</option>
                       </select>
                     </div>
                     <div class="col-sm-4">
@@ -111,7 +111,7 @@
                     </div>
                     <div class="col-sm-4">
                       <label class="form-label semibold" for="">Centro de custo</label>
-                      <p>Centro de custo</p>
+                      <p>000.000.000/0000-00</p>
                     </div>
                   </div>
                 </div>
@@ -127,11 +127,11 @@
                   <div class="row">
                     <div class="col-sm-6">
                       <label class="form-label semibold" for="">Endereço</label>
-                      <p>Avenida Maria Teresa, quadra 43, rua antonieta, 1646</p>
+                      <p>Av. das Araucárias, Rua 9 Sul</p>
                     </div>
                     <div class="col-sm-3">
                       <label class="form-label semibold" for="">Número</label>
-                      <p>1289</p>
+                      <p>1001</p>
                     </div>
                     <div class="col-sm-3">
                       <label class="form-label semibold" for="">Complemento</label>
@@ -141,7 +141,7 @@
                   <div class="row mt-md">
                     <div class="col-sm-3">
                       <label class="form-label semibold" for="">Bairro</label>
-                      <p>Asa sul</p>
+                      <p>Águas Claras</p>
                     </div>
                     <div class="col-sm-3">
                       <label class="form-label semibold" for="">Cidade</label>
@@ -153,7 +153,7 @@
                     </div>
                     <div class="col-sm-3">
                       <label class="form-label semibold" for="">CEP</label>
-                      <p>00000-000</p>
+                      <p>71938-360</p>
                     </div>
                   </div>
                 </div>
@@ -170,7 +170,7 @@
                       <label class="form-label semibold" for="">Responsável pedagógico</label>
                       <select class="select2 select2-arrow">
                         <option>Selecione</option>
-                        <option selected>Luan Almeida Barbosa</option>
+                        <option selected>Vânia Rodrigues</option>
                         <option>Otávio Goncalves Souza</option>
                         <option>Ana Souza Martins</option>
                       </select>
@@ -253,7 +253,7 @@
 
               <div class="row divider-top pb-md">
                 <div class="col-sm-12">
-                  <button type="button" class="btn btn-primary btn-success"><i
+                  <button id="notie-success" type="button" class="btn btn-primary btn-success"><i
                           class="fa fa-floppy-o mr-xs"
                           aria-hidden="true"></i>
                     Salvar
@@ -429,6 +429,9 @@
 <script src="../../js/lib/angular/controllers.js"></script>
 
 <script src="../../js/lib/bootstrap-sweetalert/sweetalert.min.js"></script>
+
+<script src="../../js/lib/notie/notie.js"></script>
+<script src="../../js/lib/notie/notie-init.js"></script>
 
 <script>
   $(document).ready(function () {
