--- a/pages/posto/posto.html
+++ b/pages/posto/posto.html
@@ -174,7 +174,7 @@
                                     aria-haspopup="true" aria-expanded="false">Ações
                             </button>
                             <div class="dropdown-menu">
-                              <a class="dropdown-item" href="#"><i class="fa fa-pencil-square-o mr-xs"
+                              <a class="dropdown-item" href="editar--posto.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                    aria-hidden="true"></i>
                                 Editar</a>
                               <div class="dropdown-divider"></div>
@@ -199,7 +199,7 @@
                                     aria-haspopup="true" aria-expanded="false">Ações
                             </button>
                             <div class="dropdown-menu">
-                              <a class="dropdown-item" href="#"><i class="fa fa-pencil-square-o mr-xs"
+                              <a class="dropdown-item" href="editar--posto.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                    aria-hidden="true"></i>
                                 Editar</a>
                               <div class="dropdown-divider"></div>
@@ -224,7 +224,7 @@
                                     aria-haspopup="true" aria-expanded="false">Ações
                             </button>
                             <div class="dropdown-menu">
-                              <a class="dropdown-item" href="#"><i class="fa fa-pencil-square-o mr-xs"
+                              <a class="dropdown-item" href="editar--posto.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                    aria-hidden="true"></i>
                                 Editar</a>
                               <div class="dropdown-divider"></div>
@@ -249,7 +249,7 @@
                                     aria-haspopup="true" aria-expanded="false">Ações
                             </button>
                             <div class="dropdown-menu">
-                              <a class="dropdown-item" href="#"><i class="fa fa-pencil-square-o mr-xs"
+                              <a class="dropdown-item" href="editar--posto.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                    aria-hidden="true"></i>
                                 Editar</a>
                               <div class="dropdown-divider"></div>
@@ -274,7 +274,7 @@
                                     aria-haspopup="true" aria-expanded="false">Ações
                             </button>
                             <div class="dropdown-menu">
-                              <a class="dropdown-item" href="#"><i class="fa fa-pencil-square-o mr-xs"
+                              <a class="dropdown-item" href="editar--posto.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                    aria-hidden="true"></i>
                                 Editar</a>
                               <div class="dropdown-divider"></div>
@@ -299,7 +299,7 @@
                                     aria-haspopup="true" aria-expanded="false">Ações
                             </button>
                             <div class="dropdown-menu">
-                              <a class="dropdown-item" href="#"><i class="fa fa-pencil-square-o mr-xs"
+                              <a class="dropdown-item" href="editar--posto.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                    aria-hidden="true"></i>
                                 Editar</a>
                               <div class="dropdown-divider"></div>
@@ -324,7 +324,7 @@
                                     aria-haspopup="true" aria-expanded="false">Ações
                             </button>
                             <div class="dropdown-menu">
-                              <a class="dropdown-item" href="#"><i class="fa fa-pencil-square-o mr-xs"
+                              <a class="dropdown-item" href="editar--posto.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                    aria-hidden="true"></i>
                                 Editar</a>
                               <div class="dropdown-divider"></div>
@@ -349,7 +349,7 @@
                                     aria-haspopup="true" aria-expanded="false">Ações
                             </button>
                             <div class="dropdown-menu">
-                              <a class="dropdown-item" href="#"><i class="fa fa-pencil-square-o mr-xs"
+                              <a class="dropdown-item" href="editar--posto.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                    aria-hidden="true"></i>
                                 Editar</a>
                               <div class="dropdown-divider"></div>
@@ -374,7 +374,7 @@
                                     aria-haspopup="true" aria-expanded="false">Ações
                             </button>
                             <div class="dropdown-menu">
-                              <a class="dropdown-item" href="#"><i class="fa fa-pencil-square-o mr-xs"
+                              <a class="dropdown-item" href="editar--posto.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                    aria-hidden="true"></i>
                                 Editar</a>
                               <div class="dropdown-divider"></div>
@@ -399,7 +399,7 @@
                                     aria-haspopup="true" aria-expanded="false">Ações
                             </button>
                             <div class="dropdown-menu">
-                              <a class="dropdown-item" href="#"><i class="fa fa-pencil-square-o mr-xs"
+                              <a class="dropdown-item" href="editar--posto.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                    aria-hidden="true"></i>
                                 Editar</a>
                               <div class="dropdown-divider"></div>
@@ -424,7 +424,7 @@
                                     aria-haspopup="true" aria-expanded="false">Ações
                             </button>
                             <div class="dropdown-menu">
-                              <a class="dropdown-item" href="#"><i class="fa fa-pencil-square-o mr-xs"
+                              <a class="dropdown-item" href="editar--posto.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                    aria-hidden="true"></i>
                                 Editar</a>
                               <div class="dropdown-divider"></div>
@@ -438,7 +438,7 @@
                       <tr>
                         <td><strong><a data-toggle="modal" data-target="#ModalDetalhaPosto"
                                        href="#ModalDetalhaPosto">Centro Educacional Católica de Brasília</a></strong></td>
-                        <td>Asa Sul</td>
+                        <td>Taguatinga Sul</td>
                         <td>Márcia Ribeiro</td>
                         <td>(61) 9847-4670</td>
                         <td>Ativo</td>
@@ -449,7 +449,7 @@
                                     aria-haspopup="true" aria-expanded="false">Ações
                             </button>
                             <div class="dropdown-menu">
-                              <a class="dropdown-item" href="#"><i class="fa fa-pencil-square-o mr-xs"
+                              <a class="dropdown-item" href="editar--posto.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                    aria-hidden="true"></i>
                                 Editar</a>
                               <div class="dropdown-divider"></div>
@@ -474,7 +474,7 @@
                                     aria-haspopup="true" aria-expanded="false">Ações
                             </button>
                             <div class="dropdown-menu">
-                              <a class="dropdown-item" href="#"><i class="fa fa-pencil-square-o mr-xs"
+                              <a class="dropdown-item" href="editar--posto.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                    aria-hidden="true"></i>
                                 Editar</a>
                               <div class="dropdown-divider"></div>
@@ -707,11 +707,11 @@
             <div class="row">
               <div class="col-sm-3">
                 <label class="form-label semibold" for="">Nome</label>
-                <p>Leonardo da Vinci</p>
+                <p>Centro Educacional Católica de Brasília</p>
               </div>
               <div class="col-sm-3">
                 <label class="form-label semibold" for="">Unidade</label>
-                <p>Asa sul</p>
+                <p>Taguatinga Sul</p>
               </div>
               <div class="col-sm-3">
                 <label class="form-label semibold" for="">CNPJ</label>
@@ -719,7 +719,7 @@
               </div>
               <div class="col-sm-3">
                 <label class="form-label semibold" for="">Centro de custo</label>
-                <p>Centro de custo</p>
+                <p>000.000.000/0000-00</p>
               </div>
             </div>
           </div>
@@ -735,7 +735,7 @@
             <div class="row">
               <div class="col-sm-6">
                 <label class="form-label semibold" for="">Endereço</label>
-                <p>Avenida Maria Teresa, quadra 43, rua antonieta, 1646</p>
+                <p>Avenida Maria Teresa, quadra 43</p>
               </div>
               <div class="col-sm-3">
                 <label class="form-label semibold" for="">Número</label>
@@ -749,7 +749,7 @@
             <div class="row mt-md">
               <div class="col-sm-3">
                 <label class="form-label semibold" for="">Bairro</label>
-                <p>Asa sul</p>
+                <p>Taguatinga Sul</p>
               </div>
               <div class="col-sm-3">
                 <label class="form-label semibold" for="">Cidade</label>
@@ -780,7 +780,7 @@
               </div>
               <div class="col-sm-4">
                 <label class="form-label semibold" for="">Responsável acadêmico</label>
-                <p>Rodrigo Sousa Martins</p>
+                <p>Márcia Ribeiro</p>
               </div>
               <div class="col-sm-4">
                 <label class="form-label semibold" for="">Interessados</label>
@@ -802,11 +802,11 @@
                   <tbody>
                   <tr>
                     <td>Principal</td>
-                    <td>(61) 0000-0000</td>
+                    <td>(61) 9847-4670</td>
                   </tr>
                   <tr>
                     <td>Comercial</td>
-                    <td>(61) 0000-0000</td>
+                    <td>(61) 9847-4670</td>
                   </tr>
                   </tbody>
                 </table>
