--- a/pages/posto/unidade.html
+++ b/pages/posto/unidade.html
@@ -94,7 +94,7 @@
                     <div class="card-block">
                       <div class="row">
                         <div class="col-sm-8">
-                          <label class="form-label semibold" for="">Nome da unidade</label>
+                          <label class="form-label semibold" for="">Nome</label>
                           <input type="text" class="form-control" aria-label="" placeholder="Nome da unidade">
                         </div>
                         <div class="col-sm-4">
@@ -447,7 +447,7 @@
             <div class="row">
               <div class="col-sm-4">
                 <label class="form-label semibold" for="">Unidade</label>
-                <p>Asa sul</p>
+                <p>Águas Claras</p>
               </div>
               <div class="col-sm-4">
                 <label class="form-label semibold" for="">CNPJ</label>
@@ -455,7 +455,7 @@
               </div>
               <div class="col-sm-4">
                 <label class="form-label semibold" for="">Centro de custo</label>
-                <p>Centro de custo</p>
+                <p>000.000.000/0000-00</p>
               </div>
             </div>
           </div>
@@ -471,11 +471,11 @@
             <div class="row">
               <div class="col-sm-6">
                 <label class="form-label semibold" for="">Endereço</label>
-                <p>Avenida Maria Teresa, quadra 43, rua antonieta, 1646</p>
+                <p>Av. das Araucárias, Rua 9 Sul</p>
               </div>
               <div class="col-sm-3">
                 <label class="form-label semibold" for="">Número</label>
-                <p>1289</p>
+                <p>1001</p>
               </div>
               <div class="col-sm-3">
                 <label class="form-label semibold" for="">Complemento</label>
@@ -485,7 +485,7 @@
             <div class="row mt-md">
               <div class="col-sm-3">
                 <label class="form-label semibold" for="">Bairro</label>
-                <p>Asa sul</p>
+                <p>Águas Claras</p>
               </div>
               <div class="col-sm-3">
                 <label class="form-label semibold" for="">Cidade</label>
@@ -497,7 +497,7 @@
               </div>
               <div class="col-sm-3">
                 <label class="form-label semibold" for="">CEP</label>
-                <p>00000-000</p>
+                <p>71938-360</p>
               </div>
             </div>
           </div>
@@ -512,7 +512,7 @@
             <div class="row">
               <div class="col-sm-6">
                 <label class="form-label semibold" for="">Responsável pedagógico</label>
-                <p>Rodrigo Sousa Martins</p>
+                <p>Vânia Rodrigues</p>
               </div>
               <div class="col-sm-6">
                 <label class="form-label semibold" for="">Interessados</label>
@@ -534,11 +534,11 @@
                   <tbody>
                   <tr>
                     <td>Principal</td>
-                    <td>(61) 0000-0000</td>
+                    <td>(61) 3442-5757</td>
                   </tr>
                   <tr>
                     <td>Comercial</td>
-                    <td>(61) 0000-0000</td>
+                    <td>(61) 3442-5757</td>
                   </tr>
                   </tbody>
                 </table>
