--- a/pages/academico/editar--niveis.html
+++ b/pages/academico/editar--niveis.html
@@ -94,7 +94,7 @@
                             class="semibold text-danger h4">*</span></label>
                     <select class="select2 select2-arrow">
                       <option>KIDS FUN</option>
-                      <option selected>JOVENS E ADULTOS</option>
+                      <option selected>Advanced</option>
                       <option>TEENS</option>
                       <option>TOP KIDS</option>
                       <option>JUNIOR</option>
@@ -104,7 +104,7 @@
                     <fieldset class="form-group">
                       <label class="form-label semibold" for="">Nome<span
                               class="semibold text-danger h4">*</span></label>
-                      <input type="text" class="form-control" id="" value="A2">
+                      <input type="text" class="form-control" id="" value="4A">
                     </fieldset>
                   </div>
                 </div>
@@ -124,12 +124,6 @@
                     <div class="checkbox-toggle mt-lg">
                       <input type="checkbox" id="check-Certificado" checked>
                       <label for="check-Certificado">Certificado</label>
-                    </div>
-                  </div>
-                  <div class="col-sm-3">
-                    <div class="checkbox-toggle mt-lg">
-                      <input type="checkbox" id="check-toggle-1"/>
-                      <label class="form-label" for="check-toggle-1">Livro a definir</label>
                     </div>
                   </div>
                 </div>
@@ -208,7 +202,7 @@
                 </div>
                 <div class="row divider-top pb-md">
                   <div class="col-sm-12">
-                    <button type="button" class="btn btn-primary btn-success"><i
+                    <button id="notie-success" type="button" class="btn btn-primary btn-success"><i
                             class="fa fa-floppy-o mr-xs"
                             aria-hidden="true"></i>
                       Salvar
@@ -391,6 +385,8 @@
 <script src="../../js/lib/angular/controllers.js"></script>
 
 <script src="../../js/lib/bootstrap-sweetalert/sweetalert.min.js"></script>
+<script src="../../js/lib/notie/notie.js"></script>
+<script src="../../js/lib/notie/notie-init.js"></script>
 
 <script>
   $(document).ready(function () {
