--- a/pages/posto/editar--posto.html
+++ b/pages/posto/editar--posto.html
@@ -121,7 +121,7 @@
                     </div>
                     <div class="col-sm-8">
                       <label class="form-label semibold" for="">Centro de custo</label>
-                      <p>Centro de custo</p>
+                      <p>000.000.000/0000-00</p>
                     </div>
                   </div>
                 </div>
@@ -184,7 +184,7 @@
                       <label class="form-label semibold" for="">Responsável acadêmico</label>
                       <select class="select2 select2-arrow">
                         <option>Selecione</option>
-                        <option selected>Luan Almeida Barbosa</option>
+                        <option selected>Márcia Ribeiro</option>
                         <option>Otávio Goncalves Souza</option>
                         <option>Ana Souza Martins</option>
                       </select>
@@ -255,7 +255,7 @@
 
               <div class="row divider-top pb-md">
                 <div class="col-sm-12">
-                  <button type="button" class="btn btn-primary btn-success"><i
+                  <button id="notie-success" type="button" class="btn btn-primary btn-success"><i
                           class="fa fa-floppy-o mr-xs"
                           aria-hidden="true"></i>
                     Salvar
@@ -440,6 +440,8 @@
 
 
 <script src="../../js/lib/bootstrap-sweetalert/sweetalert.min.js"></script>
+<script src="../../js/lib/notie/notie.js"></script>
+<script src="../../js/lib/notie/notie-init.js"></script>
 
 <script>
   $(document).ready(function () {
