Merge, e alterações no posto avançado.html

--- a/pages/posto/posto.html
+++ b/pages/posto/posto.html
@@ -224,7 +224,7 @@
                                     aria-haspopup="true" aria-expanded="false">Ações
                             </button>
                             <div class="dropdown-menu">
-                              <a class="dropdown-item" href="editar--posto.html"><i class="fa fa-pencil-square-o mr-xs"
+                              <a class="dropdown-item" href="posto--editar.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                    aria-hidden="true"></i>
                                 Editar</a>
                               <div class="dropdown-divider"></div>
@@ -249,7 +249,7 @@
                                     aria-haspopup="true" aria-expanded="false">Ações
                             </button>
                             <div class="dropdown-menu">
-                              <a class="dropdown-item" href="editar--posto.html"><i class="fa fa-pencil-square-o mr-xs"
+                              <a class="dropdown-item" href="posto--editar.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                    aria-hidden="true"></i>
                                 Editar</a>
                               <div class="dropdown-divider"></div>
@@ -274,7 +274,7 @@
                                     aria-haspopup="true" aria-expanded="false">Ações
                             </button>
                             <div class="dropdown-menu">
-                              <a class="dropdown-item" href="editar--posto.html"><i class="fa fa-pencil-square-o mr-xs"
+                              <a class="dropdown-item" href="posto--editar.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                    aria-hidden="true"></i>
                                 Editar</a>
                               <div class="dropdown-divider"></div>
@@ -299,7 +299,7 @@
                                     aria-haspopup="true" aria-expanded="false">Ações
                             </button>
                             <div class="dropdown-menu">
-                              <a class="dropdown-item" href="editar--posto.html"><i class="fa fa-pencil-square-o mr-xs"
+                              <a class="dropdown-item" href="posto--editar.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                    aria-hidden="true"></i>
                                 Editar</a>
                               <div class="dropdown-divider"></div>
@@ -324,7 +324,7 @@
                                     aria-haspopup="true" aria-expanded="false">Ações
                             </button>
                             <div class="dropdown-menu">
-                              <a class="dropdown-item" href="editar--posto.html"><i class="fa fa-pencil-square-o mr-xs"
+                              <a class="dropdown-item" href="posto--editar.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                    aria-hidden="true"></i>
                                 Editar</a>
                               <div class="dropdown-divider"></div>
@@ -349,7 +349,7 @@
                                     aria-haspopup="true" aria-expanded="false">Ações
                             </button>
                             <div class="dropdown-menu">
-                              <a class="dropdown-item" href="editar--posto.html"><i class="fa fa-pencil-square-o mr-xs"
+                              <a class="dropdown-item" href="posto--editar.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                    aria-hidden="true"></i>
                                 Editar</a>
                               <div class="dropdown-divider"></div>
@@ -374,7 +374,7 @@
                                     aria-haspopup="true" aria-expanded="false">Ações
                             </button>
                             <div class="dropdown-menu">
-                              <a class="dropdown-item" href="editar--posto.html"><i class="fa fa-pencil-square-o mr-xs"
+                              <a class="dropdown-item" href="posto--editar.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                    aria-hidden="true"></i>
                                 Editar</a>
                               <div class="dropdown-divider"></div>
@@ -399,7 +399,7 @@
                                     aria-haspopup="true" aria-expanded="false">Ações
                             </button>
                             <div class="dropdown-menu">
-                              <a class="dropdown-item" href="editar--posto.html"><i class="fa fa-pencil-square-o mr-xs"
+                              <a class="dropdown-item" href="posto--editar.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                    aria-hidden="true"></i>
                                 Editar</a>
                               <div class="dropdown-divider"></div>
@@ -424,7 +424,7 @@
                                     aria-haspopup="true" aria-expanded="false">Ações
                             </button>
                             <div class="dropdown-menu">
-                              <a class="dropdown-item" href="editar--posto.html"><i class="fa fa-pencil-square-o mr-xs"
+                              <a class="dropdown-item" href="posto--editar.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                    aria-hidden="true"></i>
                                 Editar</a>
                               <div class="dropdown-divider"></div>
@@ -474,7 +474,7 @@
                                     aria-haspopup="true" aria-expanded="false">Ações
                             </button>
                             <div class="dropdown-menu">
-                              <a class="dropdown-item" href="editar--posto.html"><i class="fa fa-pencil-square-o mr-xs"
+                              <a class="dropdown-item" href="posto--editar.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                    aria-hidden="true"></i>
                                 Editar</a>
                               <div class="dropdown-divider"></div>
